updating multiple routes and adding authentication to swagger
